--- a/views/home.jade
+++ b/views/home.jade
@@ -23,9 +23,7 @@
 
   form#new-tweet-form(autocomplete='off')
     ul.tabbed
-      li(style='float:right;')
-        input#new-tweet-submit(type='submit', disabled='disabled', value='send')
-      li#new-tweet-input-li(style='float:left;')
+      li#new-tweet-input-li
         input#new-tweet(type='text', disabled='disabled', placeholder='write your tweet here!', style='width:100%;', value='loading...')
 
   .hr
