--- a/views/home.jade
+++ b/views/home.jade
@@ -23,8 +23,8 @@
 
   form#new-tweet-form(autocomplete='off')
     ul.tabbed
-      li#new-tweet-input-li(style='text-align:center;')
-        input#new-tweet(type='text', disabled='disabled', placeholder='click to write your tweet here, and then hit enter to send', style='width:100%;', value='loading...')
+      li#new-tweet-input-li
+        input#new-tweet(type='text', disabled='disabled', placeholder='write your tweet here and submit!', style='width:98%;', value='loading...')
 
   .hr
 
