start work on getting mutes working, move some stuff around, drop cookie support in favor of store.js + convert existing stuff over to use that

--- a/views/home.jade
+++ b/views/home.jade
@@ -2,7 +2,7 @@
   #sub-nav(class='navigation')
     ul.tabbed
       li(style='float:right;')
-        a(href='/oauth/logout') logout
+        a#logout(href='#') logout
       li(style='float:right;')
         a#clear(href='#') clear
       li(style='float:right')
