new sign in button

--- a/views/index.jade
+++ b/views/index.jade
@@ -1,5 +1,5 @@
 .login-inner(id='login')
   a(href='/oauth/login')
-    img(src='img/signin.png', alt='')
+    img(src='img/login.png', alt='')
 
 script $("login").center(82);
