--- a/public/css/z.css
+++ b/public/css/z.css
@@ -1,3 +1,7 @@
+/*
+ * quick globals
+ */
+
 html, body, div, span, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, abbr, address, cite, code, del,
 dfn, em, img, ins, q, small, strong, sub, sup, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, table, caption,
 tbody, tfoot, thead, tr, th, td
@@ -264,6 +268,7 @@ li
 {
 	float: right;
 }
+
 .comment-profile-wrapper
 {
 	text-align: center;
@@ -524,6 +529,241 @@ div.growls div.large
 	-moz-border-radius: 15px;
 	-webkit-border-radius: 15px;
 	behavior: url(border-radius.htc);
+}
+
+/*
+ * opentip stuff
+ */
+.ot-container
+{
+	position: absolute;
+	max-width: 300px;
+	z-index: 100;
+}
+.ot-container.ot-fixed
+{
+	transition-duration: 0.2s, 0.2s;
+	transition-property: left, top;
+	-khtml-transition-duration: 0.2s, 0.2s;
+	-khtml-transition-property: left, top;
+	-moz-transition-duration: 0.2s, 0.2s;
+	-moz-transition-property: left, top;
+	-webkit-transition-duration: 0.2s, 0.2s;
+	-webkit-transition-property: left, top;
+}
+.ot-container.ot-completely-hidden
+{
+	display: none;
+}
+.opentip
+{
+	position: relative;
+	font-size: 13px;
+	line-height: 120%;
+}
+.opentip .title   { font-weight: bold; }
+.opentip .content { width: auto !important;}
+
+.opentip .loadingIndication
+{
+	display: none;
+	padding: 10px 15px;
+	background: url("loading.gif") center center no-repeat;
+	width: 25px;
+	height: 15px;
+}
+.opentip .loadingIndication span        { display: none; }
+.ot-loading .opentip .loadingIndication { display: block; }
+.ot-loading .opentip .content           { display: none; }
+.ot-buttons
+{
+	position: absolute;
+	right: 0;
+	top: 0;
+}
+.ot-buttons .close
+{
+	display: block;
+	width: 15px;
+	height: 15px;
+	display: block;
+	text-decoration: none;
+}
+.ot-buttons .close .canvas
+{
+	position: relative;
+	display: block;
+	color: white;
+	background-color: rgba(0, 0, 0, 0.2);  /* Read by JS and applied to canvas */
+}
+.ot-container .stem-container
+{
+	position: absolute;
+	width: 0;
+	height: 0;
+}
+.ot-container .stem
+{
+	position: absolute;
+	overflow: hidden;
+	color: #cccccc;
+/*    background: rgba(255, 0, 0, 0.5);*/
+}
+.ot-container .left   { left: 0; }
+.ot-container .center { left: 50%; }
+.ot-container .right  { right: 0; }
+.ot-container .top    { top: 0; }
+.ot-container .middle { top: 50%; }
+.ot-container .bottom { bottom: 0; }
+
+/* Styles */
+.style-klout .opentip
+{
+	box-shadow: 2px 2px 5px rgba(15,15,15,0.1);
+	background-color: #E44503;
+	border: 1px solid #E44503;
+	border-radius: 5px;
+	color: white;
+	padding: 6px;
+	-khtml-border-radius: 4px;
+	-khtml-box-shadow: 2px 2px 5px rgba(15,15,15,0.1);
+	-moz-border-radius: 5px;
+	-moz-box-shadow: 2px 2px 5px rgba(15,15,15,0.1);
+	-webkit-border-radius: 5px;
+	-webkit-box-shadow: 2px 2px 5px rgba(15,15,15,0.1);
+	behavior: url(border-radius.htc);
+
+}
+.style-klout .opentip .title
+{
+	margin-bottom: 1px;
+}
+.style-klout .stem
+{
+ 	color: #E44503;
+}
+.style-klout .canvas
+{
+	background-color: rgba(255, 241, 143, 0.5);
+	color: #a2932B;
+}
+
+.style-user .opentip
+{
+	box-shadow: 2px 2px 5px rgba(15,15,15,0.1);
+	background: white;
+	border: 1px solid white;
+	border-radius: 5px;
+	padding: 6px;
+	-khtml-border-radius: 4px;
+	-khtml-box-shadow: 2px 2px 5px rgba(15,15,15,0.1);
+	-moz-border-radius: 5px;
+	-moz-box-shadow: 2px 2px 5px rgba(15,15,15,0.1);
+	-webkit-border-radius: 5px;
+	-webkit-box-shadow: 2px 2px 5px rgba(15,15,15,0.1);
+	behavior: url(border-radius.htc);
+}
+.style-user .opentip .title
+{
+	color: #316F89;
+}
+.style-user .opentip .content
+{
+	color: #333333;
+}
+.style-user .stem
+{
+	color: #ffffff;
+}
+.style-user .canvas
+{
+	background-color: #F7BA00;
+}
+
+/* IE 6 HACKS */
+.opentip
+{
+	z-index: 110;
+}
+.opentipIFrame
+{
+	position: absolute;
+	top: 0;
+	left: 0;
+	border: none;
+	background: none;
+	margin: 0;
+	padding: 0;
+	display:none;
+ 	/*sorry for IE5*/ display/**/:block;/*sorry for IE5*/
+ 	z-index:-1;/*must have*/
+ 	filter:mask();/*must have*/
+}
+
+/* CSS3 */
+.ot-container.ot-css3
+{
+	-khtml-transition-duration: 1s; /* Well be reset by JS */
+	-khtml-transition-property: opacity, -webkit-transform;
+	-moz-transition-duration: 1s; /* Well be reset by JS */
+	-moz-transition-property: opacity, -moz-transform;
+	-o-transition-duration: 1s; /* Well be reset by JS */
+	-o-transition-property: opacity, -o-transform;
+	-webkit-transition-duration: 1s; /* Well be reset by JS */
+	-webkit-transition-property: opacity, -webkit-transform;
+	opacity: 1;
+}
+.ot-container.ot-css3.ot-completely-hidden
+{
+	display: none;
+}
+.ot-container.ot-css3.ot-becoming-visible.ot-show-appear,
+.ot-container.ot-css3.ot-hidden.ot-hide-fade
+{
+	opacity: 0;
+}
+.ot-container.ot-css3.ot-becoming-visible.ot-show-grow,
+.ot-container.ot-css3.ot-hidden.ot-hide-shrink
+{
+	-khtml-transform: scale(0);
+	-moz-transform: scale(0);
+	-o-transform: scale(0);
+	-webkit-transform: scale(0);
+}
+.ot-container.ot-css3.ot-becoming-visible.ot-show-blindDown,
+.ot-container.ot-css3.ot-becoming-visible.ot-show-slideDown,
+.ot-container.ot-css3.ot-hidden.ot-hide-blindUp
+{
+	-khtml-transform: scaleY(0);
+	-moz-transform: scaleY(0);
+	-o-transform: scaleY(0);
+	-webkit-transform: scaleY(0);
+	opacity: 0;
+}
+.ot-container.ot-css3.ot-becoming-visible.ot-show-condense,
+.ot-container.ot-css3.ot-hidden.ot-hide-puff
+{
+	-khtml-transform: scale(5);
+	-moz-transform: scale(5);
+	-o-transform: scale(5);
+	-webkit-transform: scale(5);
+	opacity: 0;
+}
+.ot-container.ot-css3.ot-becoming-visible.ot-show-rotate
+{
+	-khtml-transform: scale(3) rotate(-500deg);
+	-moz-transform: scale(3) rotate(-500deg);
+	-o-transform: scale(3) rotate(-500deg);
+	-webkit-transform: scale(3) rotate(-500deg);
+	opacity: 0;
+}
+.ot-container.ot-css3.ot-hidden.ot-hide-rotate
+{
+	-khtml-transform: scale(3) rotate(500deg);
+	-moz-transform: scale(3) rotate(500deg);
+	-o-transform: scale(3) rotate(500deg);
+	-webkit-transform: scale(3) rotate(500deg);
+	opacity: 0;
 }
 
 /*
