--- a/public/css/z.css
+++ b/public/css/z.css
@@ -48,8 +48,8 @@ li
 	margin-left: 15px;
 	margin-right: 15px;
 	background: #fff;
-	background: #fff no-repeat center top -moz-radial-gradient(top center, #666, #fff);
-	background: #666 no-repeat top center -webkit-gradient(radial, center top, 0, center top, 850, from(#666), to(#fff));
+	background: #fff no-repeat center top -moz-radial-gradient(top center, #ddd, #fff);
+	background: #ddd no-repeat top center -webkit-gradient(radial, center top, 0, center top, 1000, from(#ddd), to(#fff));
 }
 
 .huge, h1
@@ -703,13 +703,13 @@ div.growls div.large
 /* CSS3 */
 .ot-container.ot-css3
 {
-	-khtml-transition-duration: 1s; /* Well be reset by JS */
-	-khtml-transition-property: opacity, -webkit-transform;
-	-moz-transition-duration: 1s; /* Well be reset by JS */
+	-khtml-transition-duration: 1s;
+	-khtml-transition-property: opacity, -khtml-transform;
+	-moz-transition-duration: 1s;
 	-moz-transition-property: opacity, -moz-transform;
-	-o-transition-duration: 1s; /* Well be reset by JS */
-	-o-transition-property: opacity, -o-transform;
-	-webkit-transition-duration: 1s; /* Well be reset by JS */
+	transition-duration: 1s;
+	transition-property: opacity, transform;
+	-webkit-transition-duration: 1s;
 	-webkit-transition-property: opacity, -webkit-transform;
 	opacity: 1;
 }
