--- a/views/layout.jade
+++ b/views/layout.jade
@@ -2,7 +2,7 @@
 html
   head
     title= title
-    link(rel='stylesheet', href='http://fonts.googleapis.com/css?family=Open+Sans')
+    link(rel='stylesheet', href='http://fonts.googleapis.com/css?family=Open+Sans&subset=cyrillic,greek,latin&v1')
     link(rel='stylesheet', href='/css/z.min.css')
     meta(http-equiv='X-UA-Compatible', content='IE=9')
     script(type='text/javascript', src='/js/libs.js')
