also pull in the image dropper here (no serverside code committed yet)

--- a/views/home.jade
+++ b/views/home.jade
@@ -5,6 +5,7 @@
         a#logout(href='#') logout
       li(style='float:right;')
         a#clear(href='#') clear
+      li#image(title='drop images here', style='display: none; float: right;') image
       li(style='float:right')
         a#pause(href='#') pause
       li(style='float:right')
