drop klout support from mentions page

--- a/public/css/z.css
+++ b/public/css/z.css
@@ -749,6 +749,10 @@ div.growls div.large
 	display: inline-block;
 	margin: auto;
 }
+.klout
+{
+	cursor: pointer;
+}
 ::selection
 {
 	background: rgba(175,175,175,0.4);
