--- a/public/css/z.css
+++ b/public/css/z.css
@@ -300,7 +300,7 @@ input[type="text"]:focus, textarea:focus
 {
 	box-shadow: 0 0 4px rgba(81, 203, 238, 0.75), inset 0 0 4px rgba(81, 203, 238, 0.75);
 	background-color: #fefefe;
-	border: 1px solid #c4c4c4;
+	border: 1px solid rgba(81, 203, 238, 0.75);
 	-khtml-box-shadow: 0 0 4px rgba(81, 203, 238, 0.75), inset 0 0 4px rgba(81, 203, 238, 0.75);
 	-moz-box-shadow: 0 0 4px rgba(81, 203, 238, 0.75), inset 0 0 4px rgba(81, 203, 238, 0.75);
 	-webkit-box-shadow: 0 0 4px rgba(81, 203, 238, 0.75), inset 0 0 4px rgba(81, 203, 238, 0.75);
@@ -324,14 +324,25 @@ input[type="text"]:disabled, textarea:disabled
  */
 #image
 {
+	background: #f6f6f6;
+	border-radius: 2px;
+	box-shadow: 0 0 2px 2px #f6f6f6;
 	border: 2px dashed #DDD;
 	color: #456;
+	cursor: crosshair;
 	padding-left: 5px;
 	padding-right: 5px;
 	transition: all .20s ease-in-out;
+	-khtml-border-radius: 2px;
+	-khtml-box-shadow: 0 0 2px 2px #F6F6F6;
 	-khtml-transition: all .20s ease-in-out;
+	-moz-border-radius: 2px;
+	-moz-box-shadow: 0 0 2px 2px #F6F6F6;
 	-moz-transition: all .20s ease-in-out;
+	-webkit-border-radius: 2px;
+	-webkit-box-shadow: 0 0 2px 2px #F6F6F6;
 	-webkit-transition: all .20s ease-in-out;
+	behavior: url(border-radius.htc);
 }
 
 /*
@@ -344,22 +355,22 @@ input[type="text"]:disabled, textarea:disabled
 }
 #sub-nav a
 {
-	border-radius: 4px;
+	border-radius: 2px;
 	box-shadow: 0 0 2px 2px #F6F6F6;
 	background-color: #F6F6F6;
 	text-decoration: none;
 	padding-top: 3px;
 	padding-bottom: 5px;
 	padding-left: 5px;
-	padding-right: 7px;
+	padding-right: 6px;
 	transition: all .20s ease-in-out;
-	-khtml-border-radius: 4px;
+	-khtml-border-radius: 2px;
 	-khtml-box-shadow: 0 0 2px 2px #F6F6F6;
 	-khtml-transition: all .20s ease-in-out;
-	-moz-border-radius: 4px;
+	-moz-border-radius: 2px;
 	-moz-box-shadow: 0 0 2px 2px #F6F6F6;
 	-moz-transition: all .20s ease-in-out;
-	-webkit-border-radius: 4px;
+	-webkit-border-radius: 2px;
 	-webkit-box-shadow: 0 0 2px 2px #F6F6F6;
 	-webkit-transition: all .20s ease-in-out;
 	behavior: url(border-radius.htc);
@@ -712,7 +723,6 @@ div.growls div.large
 /*
  * other
  */
-
 .login-inner
 {
 	display: inline-block;
@@ -796,7 +806,7 @@ body
 	margin: 0 auto;
 	position: relative;
 	user-select: none;
-	width: width 100%;
+	width: 100%;
 	-khtml-font-smoothing: subpixel-antialiased;
 	-khtml-user-select: none;
 	-moz-font-smoothing: subpixel-antialiased;
