some improvements, get url shortening to work (effectively replace the "clear" button)

--- a/views/home.jade
+++ b/views/home.jade
@@ -4,7 +4,7 @@
       li(style='float:right;')
         a#logout(href='#') logout
       li(style='float:right;')
-        a#clear(href='#') clear
+        a#shorten(href='#') shorten
       li#image(style='display: none; float: right;') image
       li(style='float:right')
         a#pause(href='#') pause
@@ -26,6 +26,8 @@
     ul.tabbed
       li#new-tweet-input-li
         input#new-tweet(type='text', disabled='disabled', placeholder='write your tweet here and submit!', style='width:98%;', value='loading...')
+
+  .hr
 
   ul#home-timeline
     li
